@@ -1,3 +1,10 @@
+2004-08-30  Not Zed  <NotZed@Ximian.com>
+
+	* e-msg-composer-attachment-bar.c (emcab_popup): em-popup based
+	popup menu to replace the gnome one.
+	(popup_menu_event): use new func above.
+	(button_press_event): ", some cleanup.
+
 2004-06-18  Not Zed  <NotZed@Ximian.com>
 
 	** Fix for #60387.
